--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+systemd (44-6) unstable; urgency=low
+
+  [ Michael Biebl ]
+  * No longer ship the /sys directory in the systemd package since it is
+    provided by base-files nowadays.
+  * Don't run udev rules if systemd is not active.
+  * Converting /var/run, /var/lock and /etc/mtab to symlinks is a one-time
+    migration so don't run the debian-fixup script on every boot.
+
+  [ Tollef Fog Heen ]
+  * Prevent the systemd package from being removed if it's the active init
+    system, since that doesn't work.
+
+  [ Michael Biebl ]
+  * Use a separate tmpfs for /run/lock (size 5M) and /run/user (size 100M).
+    Those directories are user-writable which could lead to DoS by filling up
+    /run.  Closes: #635131
+
+ -- Michael Biebl <biebl@debian.org>  Sun, 16 Dec 2012 21:58:37 +0100
+
 systemd (44-5) unstable; urgency=low
 
   * Team upload.
@@ -8,7 +28,7 @@ systemd (44-5) unstable; urgency=low
     when restarting libvirtd.  Closes: #688635.
   * Avoid reloading services when shutting down, since that won't work and
     makes no sense.  Thanks to Michael Stapelberg for the patch.
-    Closes: #624599.
+    Closes: #635777.
   * Try to determine which init scripts support the reload action
     heuristically.  Closes: #686115, #650382.
 
