--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+systemd (44-7) unstable; urgency=low
+
+  * Fix a regression in the init-functions hook wrt reload handling that was
+    introduced when dropping the X-Interactive hack.  Closes: #696355
+
+ -- Michael Biebl <biebl@debian.org>  Fri, 21 Dec 2012 00:00:12 +0100
+
 systemd (44-6) unstable; urgency=low
 
   [ Michael Biebl ]
