Import patches-unapplied version 44-9 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 9d1b7d72c0a549722f54bc51b3511e15fa806fd5

New changelog entries:
  * Team upload.
  * Fix typo in systemd.socket man page.  Closes: #700038
  * Use color specification in "systemctl dot" which is actually
    understood by dot.  Closes: #643689
  * Fix mounting of remote filesystems like NFS.  Closes: #673309
  * Use a file trigger to automatically enable service and socket units. A lot
    of packages simply install systemd units but do not enable them. As a
    result they will be inactive after the next boot. This is a workaround for
    wheezy which will be removed again in jessie.  Closes: #692150

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+systemd (44-9) unstable; urgency=low
+
+  * Team upload.
+  * Fix typo in systemd.socket man page.  Closes: #700038
+  * Use color specification in "systemctl dot" which is actually
+    understood by dot.  Closes: #643689
+  * Fix mounting of remote filesystems like NFS.  Closes: #673309
+  * Use a file trigger to automatically enable service and socket units. A lot
+    of packages simply install systemd units but do not enable them. As a
+    result they will be inactive after the next boot. This is a workaround for
+    wheezy which will be removed again in jessie.  Closes: #692150
+
+ -- Michael Biebl <biebl@debian.org>  Fri, 15 Feb 2013 13:35:39 +0100
+
 systemd (44-8) unstable; urgency=low
 
   * Team upload.
