Import patches-unapplied version 198-0ubuntu7 to ubuntu/raring-proposed
Imported using git-ubuntu import.

Changelog parent: e90eaac7cb3f1766675d1993d204bb038846c1ca

New changelog entries:
  * Make systemd-services installable without forcing the usage of logind, so
    that we can install it by default for the other D-BUS services:
    - Move systemd-logind upstart job into libpam-systemd.
    - Drop systemd-services' Recommends: to libpam-systemd.
    - LP: #1156074

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+systemd (198-0ubuntu7) raring; urgency=low
+
+  * Make systemd-services installable without forcing the usage of logind, so
+    that we can install it by default for the other D-BUS services:
+    - Move systemd-logind upstart job into libpam-systemd.
+    - Drop systemd-services' Recommends: to libpam-systemd.
+    - LP: #1156074
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 19 Mar 2013 13:14:33 +0100
+
 systemd (198-0ubuntu6) raring; urgency=low
 
   * Fix logind autopkgtest when there are no seats (as in Jenkins).
