--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+systemd (198-0ubuntu10) raring; urgency=low
+
+  * debian/systemd-services.install: Don't install the D-BUS activation file
+    for logind. Without libpam-systemd's upstart job (which sets up the
+    cgroups) it does not work anyway, and with the upstart job it is already
+    running anyway. We'll put that back in raring+1 to respawn after crashes,
+    but for raring we do not want to run logind by default. (LP: #1167642)
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 12 Apr 2013 06:44:27 +0200
+
 systemd (198-0ubuntu9) raring; urgency=low
 
   * debian/tests/control: Add libpam-systemd dependency for logind test, as
