--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+systemd (202-0ubuntu9) saucy; urgency=low
+
+  * debian/udev-udeb.links: Add /sbin/udevadm backwards compat symlink, too.
+  * debian/extra/udev.startup: Mount devtmpfs, not tmpfs with the manual
+    make_extra_nodes().
+  * debian/extra/udev.startup: Mount devpts.
+  * debian/extra/udev.startup: Drop obsolete "scsi_wait_scan" modprobing.
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 28 May 2013 17:29:08 +0200
+
 systemd (202-0ubuntu8) saucy; urgency=low
 
   * debian/udev.{preinst,postinst,postrm}: Disable udevadm trigger during
