--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+systemd (204-0ubuntu3) saucy; urgency=low
+
+  * debian/extra/udev.startup: Restore devpts mounting, dropped in
+    202-0ubuntu10.  The justification for dropping it was that it's already
+    done by /usr/share/initramfs-tools/init, but this script is only used in
+    d-i and d-i does not use /usr/share/initramfs-tools/init (LP: #1188864).
+
+ -- Colin Watson <cjwatson@ubuntu.com>  Sat, 08 Jun 2013 00:32:53 +0100
+
 systemd (204-0ubuntu2) saucy; urgency=low
 
   * debian/rules: Add /system/firmware and /vendor/firmware to firmware search
