--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+systemd (204-0ubuntu9) saucy; urgency=low
+
+  * debian/udev.install: re-add installing /lib/udev/hotplug.functions,
+    since it's still being used by the inputattach, bluez, and usb_modeswitch
+    scripts.
+
+ -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Thu, 08 Aug 2013 10:42:38 -0400
+
 systemd (204-0ubuntu8) saucy; urgency=low
 
   * rules/80-drivers.rules: trigger the cpu helper modules regardless of
