--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,25 @@
+systemd (204-4) unstable; urgency=low
+
+  * Add preinst check to abort udev upgrade if the currently running kernel
+    lacks devtmpfs support. Since udev 176, devtmpfs is mandatory as udev no
+    longer creates any device nodes itself. This only affects self-compiled
+    kernels which now need CONFIG_DEVTMPFS=y.  Closes: #722580
+  * Fix SysV init script to correctly mount a devtmpfs instead of tmpfs. This
+    only affects users without an initramfs, which usually is responsible for
+    mounting the devtmpfs.  Closes: #722604
+  * Drop pre-squeeze upgrade code from maintainer scripts and simplify the
+    various upgrade checks.
+  * Suppress errors about unknown hwdb builtin. udev 196 introduced a new
+    "hwdb" builtin which is not understood by the old udev daemon.
+  * Add missing udeb line to shlibs.local. This ensures that udev-udeb gets a
+    proper dependency on libudev1-udeb and not libudev1.  Closes: #722939
+  * Remove udev-udeb dependency from libudev1-udeb.  This dependency was
+    copied over from the old udev-gtk-udeb package and no longer makes any
+    sense since libudev1-udeb only contains a library nowadays. It also leads
+    to a circular dependency.
+
+ -- Michael Biebl <biebl@debian.org>  Wed, 18 Sep 2013 00:05:21 +0200
+
 systemd (204-3) unstable; urgency=low
 
   [ Michael Biebl ]
@@ -16,18 +38,19 @@ systemd (204-3) unstable; urgency=low
   * Cherry-pick upstream fixes to make switching runlevels and starting
     reboot via ctrl-alt-del more robust.
   * Cherry-pick upstream fix to properly apply ACLs to Journal files.
+    Closes: #717863
 
   [ Michael Stapelberg ]
   * Make systemctl enable|disable call update-rc.d for SysV init scripts.
     Closes: #709780
   * Don't mount /tmp as tmpfs by default and make it possible to enable this
-    feature via "systemctl enable tmp.mount".
+    feature via "systemctl enable tmp.mount".  Closes: #718906
 
   [ Daniel Schaal ]
   * Add bug-script to systemd and udev.  Closes: #711245
 
   [ Ondrej Balaz ]
-  * Recognize discard option in /etc/crypttab.
+  * Recognize discard option in /etc/crypttab.  Closes: #719167
 
  -- Michael Biebl <biebl@debian.org>  Thu, 12 Sep 2013 00:13:11 +0200
 
