--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+systemd (204-0ubuntu15) saucy; urgency=low
+
+  * 0029-Support-phablet-etc-writable.patch: Update patch to also work for
+    relative symlinks to /etc/writable, as livecd-rootfs 2.191 creates them
+    relative now. (LP: #1227520)
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 01 Oct 2013 17:53:13 +0200
+
 systemd (204-0ubuntu14) saucy; urgency=low
 
   * Add 0029-Support-phablet-etc-writable.patch: On Ubuntu Phone with readonly
