Import patches-unapplied version 204-5ubuntu20.10 to ubuntu/trusty-proposed
Imported using git-ubuntu import.

Changelog parent: ec3f5cf0bfc66a90f370c8480513f1e6f89db531

New changelog entries:
  * Replace our always-probe-cpu-support-drivers.patch (which is specific to
    the "cpu" subsystem) with the more generic upstream fix which also applies
    to other subsystems. Fixes some modules not loading automatically when
    using kernel backports > 3.11. (LP: #1404509)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+systemd (204-5ubuntu20.10) trusty; urgency=medium
+
+  * Replace our always-probe-cpu-support-drivers.patch (which is specific to
+    the "cpu" subsystem) with the more generic upstream fix which also applies
+    to other subsystems. Fixes some modules not loading automatically when
+    using kernel backports > 3.11. (LP: #1404509)
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 23 Jan 2015 08:18:59 +0100
+
 systemd (204-5ubuntu20.9) trusty; urgency=medium
 
   * Pull latest keymaps from trunk, as per standing microrelease exception.
