--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,28 @@
+systemd (215-11) unstable; urgency=medium
+
+  [ Martin Pitt ]
+  * escape-beef-up-new-systemd-escape-tool.patch: Avoid creating a danling
+    symlink, to work around regression in recent patch (see #776257).
+  * Order ifup@.service and networking.service after network-pre.target.
+    (Closes: #766938)
+  * Tone down "Network interface NamePolicy= disabled on kernel commandline,
+    ignoring" info message to debug, as we expect this while we disable
+    net.ifnames by default. (Closes: #762101, LP: #1411992)
+  * logind: handle closing sessions over daemon restarts. (Closes: #759515,
+    LP: #1415104)
+  * logind: Fix sd_eviocrevoke ioctl call, to make forced input device release
+    after log out actually work.
+  * debian/patches/series: Move upstreamed patches into the appropriate
+    section.
+
+  [ Michael Biebl ]
+  * Make sure we run debian-fixup.service after /var has been mounted if /var
+    is on a separate partition. Otherwise we might end up creating the
+    /var/lock and /var/run symlink in the underlying root filesystem.
+    (Closes: #768644)
+
+ -- Martin Pitt <mpitt@debian.org>  Thu, 29 Jan 2015 09:01:54 +0100
+
 systemd (215-10) unstable; urgency=medium
 
   [ Martin Pitt ]
